feat: Update Swagger Route Get Requests
